# kudos-bot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  dash_app.py  diagnostics.md  kudos-bot-design-doc.md  kudos_messages.csv  kudos_specific_messages.csv  kudos_topics.txt  manifest.json  pyproject.toml  simulate.py  usernames.txt
.github/workflows/: test.yml
.slack/: config.json
assets/: tabs.css
cron/: __init__.py  accounting.py  backfill.py  overflow.py  record_users.py  weekly_reminder.py
presentation/: delete_channel_messages.py  demo_script.md  irr_plot.py  loc.py  mermaid.lua  publish.sh  run.lua  slideshow.md
schema/: schema.sql  views_and_functions.sql
scripts/: migrate.sh  run_llms.sh  setup.sh  setup.sql
systemd/: kudos-accounting.service  kudos-accounting.timer  kudos-backfill.service  kudos-backfill.timer  kudos-bot.service  kudos-dashboard.service  kudos-llama-chat.service  kudos-llama-embed.service  kudos-overflow.service  kudos-overflow.timer  kudos-weekly-reminder.service  kudos-weekly-reminder.timer
tests/: conftest.py  test_cron.py  test_dashboard.py  test_services.py
tests/fixtures/: kudos_test.sql
